# olx-killer-monorepo

./: .gitignore  CHANNELS.md  LICENSE  README.md
backend/: .dockerignore  .env_example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANNELS.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  gunicorn_config.py  manage.py  pyproject.toml  ruff.toml
backend/apps/: README.md  __init__.py  api_tags.py  asgi.py  celery.py  log_config.py  urls.py  wsgi.py
backend/apps/chat/: apps.py  routing.py  urls.py
backend/apps/chat/admin/: __init__.py  admin.py
backend/apps/chat/consumers/: __init__.py  consumers.py  messages_operations.py  notification_consumer.py  users_and_rooms_operations.py
backend/apps/chat/exceptions/: exceptions.py
backend/apps/chat/middlwares/: queryparams.py
backend/apps/chat/migrations/: 0001_initial.py  0002_initial.py  0002_useractivity.py  0003_attachment.py  0003_useractivity_created_at_useractivity_updated_at_and_more.py  0004_alter_attachment_file.py  0005_userleadsfromelectronink.py
backend/apps/chat/models/: __init__.py  attachment.py  chat.py  message.py  useractivity.py
backend/apps/chat/serializers/: attachment.py  chat.py  message.py
backend/apps/chat/utils/: messages.py  notification.py  rooms.py  users.py
backend/apps/chat/views/: chat.py  message.py
backend/apps/common/: emails.py  errors.py  models.py  responses.py  utils.py
backend/apps/common/api_parser_helpers/: image_utils.py  user_utils.py
backend/apps/common/create_categories/: create_olx_categories.py  olx_categories.py
backend/apps/common/locations/: cities.py  create_regions_and_cities.py  regions.py
backend/apps/common/models/: __init__.py  history.py  time_stamp.py
backend/apps/common/permissions/: __init__.py  is_anonymous.py  is_owner_or_admin.py  responses.py
backend/apps/common/utils/: __init__.py  sort_field_by_language.py
backend/apps/favorites/: admin.py  apps.py  models.py  urls.py
backend/apps/favorites/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
backend/apps/favorites/serializers/: __init__.py  user_favorites.py
backend/apps/favorites/views/: __init__.py  favorites.py  user_favorites_count.py
backend/apps/locations/: apps.py  translation.py  urls.py
backend/apps/locations/admin/: __init__.py  city.py  location.py  region.py  village.py
backend/apps/locations/migrations/: 0001_initial.py  0002_initial.py
backend/apps/locations/models/: __init__.py  city.py  location.py  region.py  village.py
backend/apps/products/: apps.py  signals.py  translation.py  urls.py
backend/apps/sendpulse/: apps.py  urls.py
backend/apps/user_messages/: apps.py
backend/apps/users/: __init__.py  admin.py  apps.py  authentication.py  authentication_extensions.py  managers.py  models.py  signals.py  tasks.py  urls.py
backend/fixtures/: categories.json  chat_Attachment.json  chat_ChatRoom.json  chat_Message.json  chat_UserActivity.json  cities.json  currencies.json  locations.json  locations_City.json  locations_Location.json  locations_Region.json  products_Category.json  products_Currency.json  regions.json  sendpulse_UserLeadsFromElectronInk.json
backend/kibana-config/: kibana.yml
backend/locale/: translator.py
backend/settings/: base.py  jazzmin.py  logging.py  main.py
frontend/: README.md  (+6 more)
(+521 files in other folders)
