[build-system]
requires = ["poetry-core", ]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "olx-killer"
version = "0.1.0"
description = ""
authors = [ "Fredy nstanislass@gmail.com" ]
readme = "README.md"
package-mode = false

[tool.isort]
force_single_line = true
line_length = 120
order_by_type = false
profile = "black"

[tool.black]
line-length = 120
target-version = ['py312']
skip-string-normalization = true
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | migrations
  | fixtures
)/
'''

[tool.poetry.dependencies]
authlib = "^1.3.1"
deep-translator = "^1.11.4"
django = "^5.0.7"
django-anymail = "^11.0.1"
django-cors-headers = "^4.4.0"
django-environ = "^0.11.2"
django-extensions = "^3.2.3"
django-modeltranslation = "^0.19.7"
django-rosetta = "^0.10.0"
django-redis = "^5.4.0"
django-storages = {extras = ["boto3"], version = "^1.14.4"}
django-jazzmin = "^3.0.1"
django-simple-history = "^3.7.0"
djangorestframework = "^3.15.2"
factory-boy = "^3.3.0"
gunicorn = "^23.0.0"
ipython = "^8.26.0"
pillow = "^10.4.0"
polib = "^1.2.0"
psycopg2-binary = "^2.9.9"
python = "^3.12"
python-slugify = "^8.0.4"
requests = "^2.32.3"
unidecode = "^1.3.8"
black = "^24.8.0"
pre-commit = "^3.8.0"
loguru = "^0.7.2"
redis = "^5.1.1"
celery = {extras = ["redis"], version = "^5.4.0"}
boto3 = "^1.35.43"
whitenoise = "^6.7.0"
django-csp = "^3.8"
django-mptt = "^0.16.0"
ruff = "^0.9.1"
channels = "^4.2.0"
daphne = "^4.1.2"
channels-redis = "^4.2.1"  
uvicorn = "^0.34.0"
chardet = "^5.2.0"
pysendpulse = "^0.1.8"
django-elasticsearch-dsl = "^8.2"

[tool.poetry.dependencies.djangorestframework-simplejwt]
extras = ["crypto", ]
version = "^5.3.1"

[tool.poetry.dependencies.drf-spectacular]
extras = ["sidecar", ]
version = "^0.27.2"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
isort = "^5.13.2"
flake8 = "^7.1.0"
